<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/yellow"
    tools:context=".activity.MainActivity">

    <TextView
        android:id="@+id/tv_txt1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        android:text="@string/welcome"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_txt2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_txt1"
        android:layout_marginStart="10dp"
        android:text="@string/ket" />

    <Button
        android:id="@+id/btn_addUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/rl"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="16dp"
        android:text="@string/absent"
        android:textColor="@android:color/black" />

    <Button
        android:id="@+id/btn_getUserList"
        android:layout_width="230dp"
        android:layout_height="50dp"
        android:layout_below="@id/tv_txt2"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="16dp"
        android:text="@string/who"
        android:textColor="@android:color/black" />

    <RelativeLayout
        android:id="@+id/rl"
        android:layout_width="match_parent"
        android:layout_height="550dp"
        android:layout_below="@id/btn_getUserList">

        <ListView
            android:id="@+id/rv_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </RelativeLayout>


</RelativeLayout>